A5-AAA/A5-nis/y.output
Terminals which are not used

   HASH
   STRUCT
   TYPEDEF
   UNION
   UNEXPECTED_TOKEN


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INTEGER_CONSTANT
    3                   | FLOATING_CONSTANT
    4                   | CHARACTER_CONSTANT
    5                   | STRING_LITERAL
    6                   | PARENTHESIS_OPEN expression PARENTHESIS_CLOSE

    7 postfix_expression: primary_expression
    8                   | postfix_expression SQR_BRACE_OPEN expression SQR_BRACE_CLOSE
    9                   | postfix_expression PARENTHESIS_OPEN argument_expression_list_opt PARENTHESIS_CLOSE
   10                   | postfix_expression DOT IDENTIFIER
   11                   | postfix_expression PTR_OP IDENTIFIER
   12                   | postfix_expression INC_OP
   13                   | postfix_expression DEC_OP
   14                   | PARENTHESIS_OPEN type_name PARENTHESIS_CLOSE CURLY_BRACE_OPEN initialiser_list CURLY_BRACE_CLOSE
   15                   | PARENTHESIS_OPEN type_name PARENTHESIS_CLOSE CURLY_BRACE_OPEN initialiser_list COMMA CURLY_BRACE_CLOSE

   16 argument_expression_list_opt: argument_expression_list
   17                             | /* empty */

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list COMMA assignment_expression

   20 unary_expression: postfix_expression
   21                 | INC_OP unary_expression
   22                 | DEC_OP unary_expression
   23                 | unary_operator cast_expression
   24                 | SIZEOF unary_expression
   25                 | SIZEOF PARENTHESIS_OPEN type_name PARENTHESIS_CLOSE

   26 unary_operator: BITWISEAND
   27               | STAR
   28               | PLUS
   29               | MINUS
   30               | NOT
   31               | EXCLAMATION

   32 cast_expression: unary_expression
   33                | PARENTHESIS_OPEN type_name PARENTHESIS_CLOSE cast_expression

   34 multiplicative_expression: cast_expression
   35                          | multiplicative_expression STAR cast_expression
   36                          | multiplicative_expression DIVIDE cast_expression
   37                          | multiplicative_expression PERCENTAGE cast_expression

   38 additive_expression: multiplicative_expression
   39                    | additive_expression PLUS multiplicative_expression
   40                    | additive_expression MINUS multiplicative_expression

   41 shift_expression: additive_expression
   42                 | shift_expression LEFT_OP additive_expression
   43                 | shift_expression RIGHT_OP additive_expression

   44 relational_expression: shift_expression
   45                      | relational_expression LT_OP shift_expression
   46                      | relational_expression GT_OP shift_expression
   47                      | relational_expression LTE_OP shift_expression
   48                      | relational_expression GTE_OP shift_expression

   49 equality_expression: relational_expression
   50                    | equality_expression EQ_OP relational_expression
   51                    | equality_expression NE_OP relational_expression

   52 AND_expression: equality_expression
   53               | AND_expression BITWISEAND equality_expression

   54 exclusive_OR_expression: AND_expression
   55                        | exclusive_OR_expression BITWISEXOR AND_expression

   56 inclusive_OR_expression: exclusive_OR_expression
   57                        | inclusive_OR_expression BITWISEOR exclusive_OR_expression

   58 M: /* empty */

   59 N: /* empty */

   60 logical_AND_expression: inclusive_OR_expression
   61                       | logical_AND_expression AND_OP M inclusive_OR_expression

   62 logical_OR_expression: logical_AND_expression
   63                      | logical_OR_expression OR_OP M logical_AND_expression

   64 conditional_expression: logical_OR_expression
   65                       | logical_OR_expression N QUESTION_MARK M expression N COLON M conditional_expression

   66 assignment_expression: conditional_expression
   67                      | unary_expression assignment_operator assignment_expression

   68 assignment_operator: EQ
   69                    | MUL_ASSIGN
   70                    | DIV_ASSIGN
   71                    | MOD_ASSIGN
   72                    | ADD_ASSIGN
   73                    | SUB_ASSIGN
   74                    | LEFT_ASSIGN
   75                    | RIGHT_ASSIGN
   76                    | AND_ASSIGN
   77                    | XOR_ASSIGN
   78                    | OR_ASSIGN

   79 expression: assignment_expression
   80           | expression COMMA assignment_expression

   81 constant_expression: conditional_expression

   82 declaration: declaration_specifiers init_declarator_list_opt SEMI_COLON

   83 init_declarator_list_opt: init_declarator_list
   84                         | /* empty */

   85 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   86                       | type_specifier declaration_specifiers_opt
   87                       | type_qualifier declaration_specifiers_opt
   88                       | function_specifier declaration_specifiers_opt

   89 declaration_specifiers_opt: declaration_specifiers
   90                           | /* empty */

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list COMMA init_declarator

   93 init_declarator: declarator
   94                | declarator EQ initialiser

   95 storage_class_specifier: EXTERN
   96                        | STATIC
   97                        | AUTO
   98                        | REGISTER

   99 type_specifier: VOID_TYPE
  100               | CHAR_TYPE
  101               | SHORT
  102               | INT_TYPE
  103               | LONG
  104               | FLOAT_TYPE
  105               | DOUBLE
  106               | SIGNED
  107               | UNSIGNED
  108               | BOOL
  109               | COMPLEX
  110               | IMAGINARY
  111               | enum_specifier

  112 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  113                         | type_qualifier specifier_qualifier_list_opt

  114 specifier_qualifier_list_opt: specifier_qualifier_list
  115                             | /* empty */

  116 enum_specifier: ENUM identifier_opt CURLY_BRACE_OPEN enumerator_list CURLY_BRACE_CLOSE
  117               | ENUM identifier_opt CURLY_BRACE_OPEN enumerator_list COMMA CURLY_BRACE_CLOSE
  118               | ENUM IDENTIFIER

  119 identifier_opt: IDENTIFIER
  120               | /* empty */

  121 enumerator_list: enumerator
  122                | enumerator_list COMMA enumerator

  123 enumerator: IDENTIFIER
  124           | IDENTIFIER EQ constant_expression

  125 type_qualifier: CONST
  126               | RESTRICT
  127               | VOLATILE

  128 function_specifier: INLINE

  129 declarator: pointer direct_declarator
  130           | direct_declarator

  131 change_scope: /* empty */

  132 direct_declarator: IDENTIFIER
  133                  | PARENTHESIS_OPEN declarator PARENTHESIS_CLOSE
  134                  | direct_declarator SQR_BRACE_OPEN type_qualifier_list assignment_expression SQR_BRACE_CLOSE
  135                  | direct_declarator SQR_BRACE_OPEN type_qualifier_list SQR_BRACE_CLOSE
  136                  | direct_declarator SQR_BRACE_OPEN assignment_expression SQR_BRACE_CLOSE
  137                  | direct_declarator SQR_BRACE_OPEN SQR_BRACE_CLOSE
  138                  | direct_declarator SQR_BRACE_OPEN STATIC type_qualifier_list assignment_expression SQR_BRACE_CLOSE
  139                  | direct_declarator SQR_BRACE_OPEN STATIC assignment_expression SQR_BRACE_CLOSE
  140                  | direct_declarator SQR_BRACE_OPEN type_qualifier_list STATIC assignment_expression SQR_BRACE_CLOSE
  141                  | direct_declarator SQR_BRACE_OPEN type_qualifier_list STAR SQR_BRACE_CLOSE
  142                  | direct_declarator SQR_BRACE_OPEN STAR SQR_BRACE_CLOSE
  143                  | direct_declarator PARENTHESIS_OPEN change_scope parameter_type_list PARENTHESIS_CLOSE
  144                  | direct_declarator PARENTHESIS_OPEN identifier_list PARENTHESIS_CLOSE
  145                  | direct_declarator PARENTHESIS_OPEN change_scope PARENTHESIS_CLOSE

  146 type_qualifier_list_opt: type_qualifier_list
  147                        | /* empty */

  148 pointer: STAR type_qualifier_list_opt
  149        | STAR type_qualifier_list_opt pointer

  150 type_qualifier_list: type_qualifier
  151                    | type_qualifier_list type_qualifier

  152 parameter_type_list: parameter_list
  153                    | parameter_list COMMA ELLIPSIS

  154 parameter_list: parameter_declaration
  155               | parameter_list COMMA parameter_declaration

  156 parameter_declaration: declaration_specifiers declarator
  157                      | declaration_specifiers

  158 identifier_list: IDENTIFIER
  159                | identifier_list COMMA IDENTIFIER

  160 type_name: specifier_qualifier_list

  161 initialiser: assignment_expression
  162            | CURLY_BRACE_OPEN initialiser_list CURLY_BRACE_CLOSE
  163            | CURLY_BRACE_OPEN initialiser_list COMMA CURLY_BRACE_CLOSE

  164 initialiser_list: designation_opt initialiser
  165                 | initialiser_list COMMA designation_opt initialiser

  166 designation_opt: designation
  167                | /* empty */

  168 designation: designator_list EQ

  169 designator_list: designator
  170                | designator_list designator

  171 designator: SQR_BRACE_OPEN constant_expression SQR_BRACE_CLOSE
  172           | DOT IDENTIFIER

  173 statement: labeled_statement
  174          | compound_statement
  175          | expression_statement
  176          | selection_statement
  177          | iteration_statement
  178          | jump_statement

  179 labeled_statement: IDENTIFIER COLON statement
  180                  | CASE constant_expression COLON statement
  181                  | DEFAULT COLON statement

  182 change_block: /* empty */

  183 compound_statement: CURLY_BRACE_OPEN change_block change_scope block_item_list_opt CURLY_BRACE_CLOSE

  184 block_item_list_opt: block_item_list
  185                    | /* empty */

  186 block_item_list: block_item
  187                | block_item_list M block_item

  188 block_item: declaration
  189           | statement

  190 expression_statement: expression_opt SEMI_COLON

  191 expression_opt: expression
  192               | /* empty */

  193 selection_statement: IF PARENTHESIS_OPEN expression PARENTHESIS_CLOSE M statement N
  194                    | IF PARENTHESIS_OPEN expression PARENTHESIS_CLOSE M statement N ELSE M statement
  195                    | SWITCH PARENTHESIS_OPEN expression PARENTHESIS_CLOSE statement

  196 iteration_statement: WHILE M PARENTHESIS_OPEN expression PARENTHESIS_CLOSE M statement
  197                    | DO M statement M WHILE PARENTHESIS_OPEN expression PARENTHESIS_CLOSE SEMI_COLON
  198                    | FOR PARENTHESIS_OPEN expression_opt SEMI_COLON M expression_opt SEMI_COLON M expression_opt N PARENTHESIS_CLOSE M statement
  199                    | FOR PARENTHESIS_OPEN declaration expression_opt SEMI_COLON expression_opt PARENTHESIS_CLOSE statement

  200 jump_statement: GOTO IDENTIFIER SEMI_COLON
  201               | CONTINUE SEMI_COLON
  202               | BREAK SEMI_COLON
  203               | RETURN expression_opt SEMI_COLON

  204 translation_unit: external_declaration
  205                 | translation_unit external_declaration

  206 external_declaration: function_definition
  207                     | declaration

  208 function_definition: declaration_specifiers declarator declaration_list_opt change_scope CURLY_BRACE_OPEN block_item_list_opt CURLY_BRACE_CLOSE

  209 declaration_list_opt: declaration_list
  210                     | /* empty */

  211 declaration_list: declaration
  212                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
error (256)
PARENTHESIS_OPEN (258) 6 9 14 15 25 33 133 143 144 145 193 194 195
    196 197 198 199
PARENTHESIS_CLOSE (259) 6 9 14 15 25 33 133 143 144 145 193 194 195
    196 197 198 199
CURLY_BRACE_OPEN (260) 14 15 116 117 162 163 183 208
CURLY_BRACE_CLOSE (261) 14 15 116 117 162 163 183 208
SQR_BRACE_OPEN (262) 8 134 135 136 137 138 139 140 141 142 171
SQR_BRACE_CLOSE (263) 8 134 135 136 137 138 139 140 141 142 171
INC_OP (264) 12 21
DEC_OP (265) 13 22
LEFT_OP (266) 42
RIGHT_OP (267) 43
EQ_OP (268) 50
NE_OP (269) 51
LTE_OP (270) 47
GTE_OP (271) 48
AND_OP (272) 61
OR_OP (273) 63
PTR_OP (274) 11
LT_OP (275) 45
GT_OP (276) 46
EQ (277) 68 94 124 168
DOT (278) 10 172
BITWISEAND (279) 26 53
BITWISEOR (280) 57
BITWISEXOR (281) 55
STAR (282) 27 35 141 142 148 149
PLUS (283) 28 39
MINUS (284) 29 40
NOT (285) 30
EXCLAMATION (286) 31
DIVIDE (287) 36
PERCENTAGE (288) 37
ADD_ASSIGN (289) 72
SUB_ASSIGN (290) 73
MUL_ASSIGN (291) 69
DIV_ASSIGN (292) 70
MOD_ASSIGN (293) 71
LEFT_ASSIGN (294) 74
RIGHT_ASSIGN (295) 75
OR_ASSIGN (296) 78
AND_ASSIGN (297) 76
XOR_ASSIGN (298) 77
COLON (299) 65 179 180 181
SEMI_COLON (300) 82 190 197 198 199 200 201 202 203
ELLIPSIS (301) 153
QUESTION_MARK (302) 65
COMMA (303) 15 19 80 92 117 122 153 155 159 163 165
HASH (304)
EXTERN (305) 95
STATIC (306) 96 138 139 140
AUTO (307) 97
REGISTER (308) 98
VOID_TYPE (309) 99
CHAR_TYPE (310) 100
SHORT (311) 101
INT_TYPE (312) 102
LONG (313) 103
FLOAT_TYPE (314) 104
DOUBLE (315) 105
SIGNED (316) 106
UNSIGNED (317) 107
BOOL (318) 108
COMPLEX (319) 109
IMAGINARY (320) 110
CONST (321) 125
RESTRICT (322) 126
VOLATILE (323) 127
ENUM (324) 116 117 118
INLINE (325) 128
SIZEOF (326) 24 25
STRUCT (327)
TYPEDEF (328)
UNION (329)
IF (330) 193 194
ELSE (331) 194
CASE (332) 180
DEFAULT (333) 181
WHILE (334) 196 197
CONTINUE (335) 201
DO (336) 197
GOTO (337) 200
FOR (338) 198 199
RETURN (339) 203
BREAK (340) 202
SWITCH (341) 195
UNEXPECTED_TOKEN (342)
IDENTIFIER (343) 1 10 11 118 119 123 124 132 158 159 172 179 200
INTEGER_CONSTANT (344) 2
FLOATING_CONSTANT (345) 3
CHARACTER_CONSTANT (346) 4
STRING_LITERAL (347) 5
THEN (348)


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
primary_expression (95)
    on left: 1 2 3 4 5 6, on right: 7
postfix_expression (96)
    on left: 7 8 9 10 11 12 13 14 15, on right: 8 9 10 11 12 13 20
argument_expression_list_opt (97)
    on left: 16 17, on right: 9
argument_expression_list (98)
    on left: 18 19, on right: 16 19
unary_expression (99)
    on left: 20 21 22 23 24 25, on right: 21 22 24 32 67
unary_operator (100)
    on left: 26 27 28 29 30 31, on right: 23
cast_expression (101)
    on left: 32 33, on right: 23 33 34 35 36 37
multiplicative_expression (102)
    on left: 34 35 36 37, on right: 35 36 37 38 39 40
additive_expression (103)
    on left: 38 39 40, on right: 39 40 41 42 43
shift_expression (104)
    on left: 41 42 43, on right: 42 43 44 45 46 47 48
relational_expression (105)
    on left: 44 45 46 47 48, on right: 45 46 47 48 49 50 51
equality_expression (106)
    on left: 49 50 51, on right: 50 51 52 53
AND_expression (107)
    on left: 52 53, on right: 53 54 55
exclusive_OR_expression (108)
    on left: 54 55, on right: 55 56 57
inclusive_OR_expression (109)
    on left: 56 57, on right: 57 60 61
M (110)
    on left: 58, on right: 61 63 65 187 193 194 196 197 198
N (111)
    on left: 59, on right: 65 193 194 198
logical_AND_expression (112)
    on left: 60 61, on right: 61 62 63
logical_OR_expression (113)
    on left: 62 63, on right: 63 64 65
conditional_expression (114)
    on left: 64 65, on right: 65 66 81
assignment_expression (115)
    on left: 66 67, on right: 18 19 67 79 80 134 136 138 139 140 161
assignment_operator (116)
    on left: 68 69 70 71 72 73 74 75 76 77 78, on right: 67
expression (117)
    on left: 79 80, on right: 6 8 65 80 191 193 194 195 196 197
constant_expression (118)
    on left: 81, on right: 124 171 180
declaration (119)
    on left: 82, on right: 188 199 207 211 212
init_declarator_list_opt (120)
    on left: 83 84, on right: 82
declaration_specifiers (121)
    on left: 85 86 87 88, on right: 82 89 156 157 208
declaration_specifiers_opt (122)
    on left: 89 90, on right: 85 86 87 88
init_declarator_list (123)
    on left: 91 92, on right: 83 92
init_declarator (124)
    on left: 93 94, on right: 91 92
storage_class_specifier (125)
    on left: 95 96 97 98, on right: 85
type_specifier (126)
    on left: 99 100 101 102 103 104 105 106 107 108 109 110 111,
    on right: 86 112
specifier_qualifier_list (127)
    on left: 112 113, on right: 114 160
specifier_qualifier_list_opt (128)
    on left: 114 115, on right: 112 113
enum_specifier (129)
    on left: 116 117 118, on right: 111
identifier_opt (130)
    on left: 119 120, on right: 116 117
enumerator_list (131)
    on left: 121 122, on right: 116 117 122
enumerator (132)
    on left: 123 124, on right: 121 122
type_qualifier (133)
    on left: 125 126 127, on right: 87 113 150 151
function_specifier (134)
    on left: 128, on right: 88
declarator (135)
    on left: 129 130, on right: 93 94 133 156 208
change_scope (136)
    on left: 131, on right: 143 145 183 208
direct_declarator (137)
    on left: 132 133 134 135 136 137 138 139 140 141 142 143 144 145
   , on right: 129 130 134 135 136 137 138 139 140 141 142 143 144
    145
type_qualifier_list_opt (138)
    on left: 146 147, on right: 148 149
pointer (139)
    on left: 148 149, on right: 129 149
type_qualifier_list (140)
    on left: 150 151, on right: 134 135 138 140 141 146 151
parameter_type_list (141)
    on left: 152 153, on right: 143
parameter_list (142)
    on left: 154 155, on right: 152 153 155
parameter_declaration (143)
    on left: 156 157, on right: 154 155
identifier_list (144)
    on left: 158 159, on right: 144 159
type_name (145)
    on left: 160, on right: 14 15 25 33
initialiser (146)
    on left: 161 162 163, on right: 94 164 165
initialiser_list (147)
    on left: 164 165, on right: 14 15 162 163 165
designation_opt (148)
    on left: 166 167, on right: 164 165
designation (149)
    on left: 168, on right: 166
designator_list (150)
    on left: 169 170, on right: 168 170
designator (151)
    on left: 171 172, on right: 169 170
statement (152)
    on left: 173 174 175 176 177 178, on right: 179 180 181 189 193
    194 195 196 197 198 199
labeled_statement (153)
    on left: 179 180 181, on right: 173
change_block (154)
    on left: 182, on right: 183
compound_statement (155)
    on left: 183, on right: 174
block_item_list_opt (156)
    on left: 184 185, on right: 183 208
block_item_list (157)
    on left: 186 187, on right: 184 187
block_item (158)
    on left: 188 189, on right: 186 187
expression_statement (159)
    on left: 190, on right: 175
expression_opt (160)
    on left: 191 192, on right: 190 198 199 203
selection_statement (161)
    on left: 193 194 195, on right: 176
iteration_statement (162)
    on left: 196 197 198 199, on right: 177
jump_statement (163)
    on left: 200 201 202 203, on right: 178
translation_unit (164)
    on left: 204 205, on right: 0 205
external_declaration (165)
    on left: 206 207, on right: 204 205
function_definition (166)
    on left: 208, on right: 206
declaration_list_opt (167)
    on left: 209 210, on right: 208
declaration_list (168)
    on left: 211 212, on right: 209 212


state 0

    0 $accept: . translation_unit $end
   82 declaration: . declaration_specifiers init_declarator_list_opt SEMI_COLON
   85 declaration_specifiers: . storage_class_specifier declaration_specifiers_opt
   86                       | . type_specifier declaration_specifiers_opt
   87                       | . type_qualifier declaration_specifiers_opt
   88                       | . function_specifier declaration_specifiers_opt
   95 storage_class_specifier: . EXTERN
   96                        | . STATIC
   97                        | . AUTO
   98                        | . REGISTER
   99 type_specifier: . VOID_TYPE
  100               | . CHAR_TYPE
  101               | . SHORT
  102               | . INT_TYPE
  103               | . LONG
  104               | . FLOAT_TYPE
  105               | . DOUBLE
  106               | . SIGNED
  107               | . UNSIGNED
  108               | . BOOL
  109               | . COMPLEX
  110               | . IMAGINARY
  111               | . enum_specifier
  116 enum_specifier: . ENUM identifier_opt CURLY_BRACE_OPEN enumerator_list CURLY_BRACE_CLOSE
  117               | . ENUM identifier_opt CURLY_BRACE_OPEN enumerator_list COMMA CURLY_BRACE_CLOSE
  118               | . ENUM IDENTIFIER
  125 type_qualifier: . CONST
  126               | . RESTRICT
  127               | . VOLATILE
  128 function_specifier: . INLINE
  204 translation_unit: . external_declaration
  205                 | . translation_unit external_declaration
  206 external_declaration: . function_definition
  207                     | . declaration
  208 function_definition: . declaration_specifiers declarator declaration_list_opt change_scope CURLY_BRACE_OPEN block_item_list_opt CURLY_BRACE_CLOSE

    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    AUTO        shift, and go to state 3
    REGISTER    shift, and go to state 4
    VOID_TYPE   shift, and go to state 5
    CHAR_TYPE   shift, and go to state 6
    SHORT       shift, and go to state 7
    INT_TYPE    shift, and go to state 8
    LONG        shift, and go to state 9
    FLOAT_TYPE  shift, and go to state 10
    DOUBLE      shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    BOOL        shift, and go to state 14
    COMPLEX     shift, and go to state 15
    IMAGINARY   shift, and go to state 16
    CONST       shift, and go to state 17
    RESTRICT    shift, and go to state 18
    VOLATILE    shift, and go to state 19
    ENUM        shift, and go to state 20
    INLINE      shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


state 1

   95 storage_class_specifier: EXTERN .

    $default  reduce using rule 95 (storage_class_specifier)


state 2

   96 storage_class_specifier: STATIC .

    $default  reduce using rule 96 (storage_class_specifier)


state 3

   97 storage_class_specifier: AUTO .

    $default  reduce using rule 97 (storage_class_specifier)


state 4

   98 storage_class_specifier: REGISTER .

    $default  reduce using rule 98 (storage_class_specifier)


state 5

   99 type_specifier: VOID_TYPE .

    $default  reduce using rule 99 (type_specifier)


state 6

  100 type_specifier: CHAR_TYPE .

    $default  reduce using rule 100 (type_specifier)


state 7

  101 type_specifier: SHORT .

    $default  reduce using rule 101 (type_specifier)


state 8

  102 type_specifier: INT_TYPE .

    $default  reduce using rule 102 (type_specifier)


state 9

  103 type_specifier: LONG .

    $default  reduce using rule 103 (type_specifier)


state 10

  104 type_specifier: FLOAT_TYPE .

    $default  reduce using rule 104 (type_specifier)


state 11

  105 type_specifier: DOUBLE .

    $default  reduce using rule 105 (type_specifier)


state 12

  106 type_specifier: SIGNED .

    $default  reduce using rule 106 (type_specifier)


state 13

  107 type_specifier: UNSIGNED .

    $default  reduce using rule 107 (type_specifier)


state 14

  108 type_specifier: BOOL .

    $default  reduce using rule 108 (type_specifier)


state 15

  109 type_specifier: COMPLEX .

    $default  reduce using rule 109 (type_specifier)


state 16

  110 type_specifier: IMAGINARY .

    $default  reduce using rule 110 (type_specifier)


state 17

  125 type_qualifier: CONST .

    $default  reduce using rule 125 (type_qualifier)


state 18

  126 type_qualifier: RESTRICT .

    $default  reduce using rule 126 (type_qualifier)


state 19

  127 type_qualifier: VOLATILE .

    $default  reduce using rule 127 (type_qualifier)


state 20

  116 enum_specifier: ENUM . identifier_opt CURLY_BRACE_OPEN enumerator_list CURLY_BRACE_CLOSE
  117               | ENUM . identifier_opt CURLY_BRACE_OPEN enumerator_list COMMA CURLY_BRACE_CLOSE
  118               | ENUM . IDENTIFIER
  119 identifier_opt: . IDENTIFIER
  120               | .  [CURLY_BRACE_OPEN]

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 120 (identifier_opt)

    identifier_opt  go to state 33


state 21

  128 function_specifier: INLINE .

    $default  reduce using rule 128 (function_specifier)


state 22

  207 external_declaration: declaration .

    $default  reduce using rule 207 (external_declaration)


state 23

   82 declaration: declaration_specifiers . init_declarator_list_opt SEMI_COLON
   83 init_declarator_list_opt: . init_declarator_list
   84                         | .  [SEMI_COLON]
   91 init_declarator_list: . init_declarator
   92                     | . init_declarator_list COMMA init_declarator
   93 init_declarator: . declarator
   94                | . declarator EQ initialiser
  129 declarator: . pointer direct_declarator
  130           | . direct_declarator
  132 direct_declarator: . IDENTIFIER
  133                  | . PARENTHESIS_OPEN declarator PARENTHESIS_CLOSE
  134                  | . direct_declarator SQR_BRACE_OPEN type_qualifier_list assignment_expression SQR_BRACE_CLOSE
  135                  | . direct_declarator SQR_BRACE_OPEN type_qualifier_list SQR_BRACE_CLOSE
  136                  | . direct_declarator SQR_BRACE_OPEN assignment_expression SQR_BRACE_CLOSE
  137                  | . direct_declarator SQR_BRACE_OPEN SQR_BRACE_CLOSE
  138                  | . direct_declarator SQR_BRACE_OPEN STATIC type_qualifier_list assignment_expression SQR_BRACE_CLOSE
  139                  | . direct_declarator SQR_BRACE_OPEN STATIC assignment_expression SQR_BRACE_CLOSE
  140                  | . direct_declarator SQR_BRACE_OPEN type_qualifier_list STATIC assignment_expression SQR_BRACE_CLOSE
  141                  | . direct_declarator SQR_BRACE_OPEN type_qualifier_list STAR SQR_BRACE_CLOSE
  142                  | . direct_declarator SQR_BRACE_OPEN STAR SQR_BRACE_CLOSE
  143                  | . direct_declarator PARENTHESIS_OPEN change_scope parameter_type_list PARENTHESIS_CLOSE
  144                  | . direct_declarator PARENTHESIS_OPEN identifier_list PARENTHESIS_CLOSE
  145                  | . direct_declarator PARENTHESIS_OPEN change_scope PARENTHESIS_CLOSE
  148 pointer: . STAR type_qualifier_list_opt
  149        | . STAR type_qualifier_list_opt pointer
  208 function_definition: declaration_specifiers . declarator declaration_list_opt change_scope CURLY_BRACE_OPEN block_item_list_opt CURLY_BRACE_CLOSE

    PARENTHESIS_OPEN  shift, and go to state 34
    STAR              shift, and go to state 35
    IDENTIFIER        shift, and go to state 36

    $default  reduce using rule 84 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 37
    init_declarator_list      go to state 38
    init_declarator           go to state 39
    declarator                go to state 40
    direct_declarator         go to state 41
    pointer                   go to state 42


state 24

   85 declaration_specifiers: . storage_class_specifier declaration_specifiers_opt
   85                       | storage_class_specifier . declaration_specifiers_opt
   86                       | . type_specifier declaration_specifiers_opt
   87                       | . type_qualifier declaration_specifiers_opt
   88                       | . function_specifier declaration_specifiers_opt
   89 declaration_specifiers_opt: . declaration_specifiers
   90                           | .  [PARENTHESIS_OPEN, PARENTHESIS_CLOSE, STAR, SEMI_COLON, COMMA, IDENTIFIER]
   95 storage_class_specifier: . EXTERN
   96                        | . STATIC
   97                        | . AUTO
   98                        | . REGISTER
   99 type_specifier: . VOID_TYPE
  100               | . CHAR_TYPE
  101               | . SHORT
  102               | . INT_TYPE
  103               | . LONG
  104               | . FLOAT_TYPE
  105               | . DOUBLE
  106               | . SIGNED
  107               | . UNSIGNED
  108               | . BOOL
  109               | . COMPLEX
  110               | . IMAGINARY
  111               | . enum_specifier
  116 enum_specifier: . ENUM identifier_opt CURLY_BRACE_OPEN enumerator_list CURLY_BRACE_CLOSE
  117               | . ENUM identifier_opt CURLY_BRACE_OPEN enumerator_list COMMA CURLY_BRACE_CLOSE
  118               | . ENUM IDENTIFIER
  125 type_qualifier: . CONST
  126               | . RESTRICT
  127               | . VOLATILE
  128 function_specifier: . INLINE

    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    AUTO        shift, and go to state 3
    REGISTER    shift, and go to state 4
    VOID_TYPE   shift, and go to state 5
    CHAR_TYPE   shift, and go to state 6
    SHORT       shift, and go to state 7
    INT_TYPE    shift, and go to state 8
    LONG        shift, and go to state 9
    FLOAT_TYPE  shift, and go to state 10
    DOUBLE      shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    BOOL        shift, and go to state 14
    COMPLEX     shift, and go to state 15
    IMAGINARY   shift, and go to state 16
    CONST       shift, and go to state 17
    RESTRICT    shift, and go to state 18
    VOLATILE    shift, and go to state 19
    ENUM        shift, and go to state 20
    INLINE      shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 44
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


state 25

   85 declaration_specifiers: . storage_class_specifier declaration_specifiers_opt
   86                       | . type_specifier declaration_specifiers_opt
   86                       | type_specifier . declaration_specifiers_opt
   87                       | . type_qualifier declaration_specifiers_opt
   88                       | . function_specifier declaration_specifiers_opt
   89 declaration_specifiers_opt: . declaration_specifiers
   90                           | .  [PARENTHESIS_OPEN, PARENTHESIS_CLOSE, STAR, SEMI_COLON, COMMA, IDENTIFIER]
   95 storage_class_specifier: . EXTERN
   96                        | . STATIC
   97                        | . AUTO
   98                        | . REGISTER
   99 type_specifier: . VOID_TYPE
  100               | . CHAR_TYPE
  101               | . SHORT
  102               | . INT_TYPE
  103               | . LONG
  104               | . FLOAT_TYPE
  105               | . DOUBLE
  106               | . SIGNED
  107               | . UNSIGNED
  108               | . BOOL
  109               | . COMPLEX
  110               | . IMAGINARY
  111               | . enum_specifier
  116 enum_specifier: . ENUM identifier_opt CURLY_BRACE_OPEN enumerator_list CURLY_BRACE_CLOSE
  117               | . ENUM identifier_opt CURLY_BRACE_OPEN enumerator_list COMMA CURLY_BRACE_CLOSE
  118               | . ENUM IDENTIFIER
  125 type_qualifier: . CONST
  126               | . RESTRICT
  127               | . VOLATILE
  128 function_specifier: . INLINE

    EXTERN      shift, and go to state 1
    STATIC      shift, and go to state 2
    AUTO        shift, and go to state 3
    REGISTER    shift, and go to state 4
    VOID_TYPE   shift, and go to state 5
    CHAR_TYPE   shift, and go to state 6
    SHORT       shift, and go to state 7
    INT_TYPE    shift, and go to state 8
    LONG        shift, and go to state 9
    FLOAT_TYPE  shift, and go to state 10
    DOUBLE      shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    BOOL        shift, and go to state 14
    COMPLEX     shift, and go to state 15
    IMAGINARY   shift, and go to state 16
    CONST       shift, and go to state 17
    RESTRICT    shift, and go to state 18
    VOLATILE    shift, and go to state 19
    ENUM        shift, and go to state 20
    INLINE      shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers_opt)

    declaration_specifiers      go to state 43
    declaration_specifiers_opt  go to state 45
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


state 26

  111 type_specifier: enum_specifier .

    $default  reduce using rule 111 (type_specifier)


state 27
